# HeavyDevs-Assistant

./: .gitignore  Dockerfile  README.md  address_book_classes.py  address_book_main.py  bot_assistant-0.1.0-py3-none-any.whl  classAdress.py  main.py  notes_classes.py  notes_main.py  pyproject.toml  requirements.txt  search_and_sort_tags_func.py  setup.cfg  sort_functions.py  sort_main.py  tags_class.py  test.py  test2.py
bot_assistant/: activity_chart.py  address_book_classes.py  address_book_main.py  main.py  notes_classes.py  notes_main.py  sort_functions.py  sort_main.py  translator.py  user_interaction.py
