[metadata]
name = bot-assistant
version = 0.1.0
author = HeavyDevs
url = https://github.com/SVcheburator/Course_project
description = Personal assistant
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]

[options]
packages = find:
install_requires =
    platformdirs>=3.10.0
    rich>=13.5.2
    setuptools>=65.5.0

[options.entry_points]
console_scripts = 
    bot-assistant = bot_assistant.main:main_func